<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceScreen android:key="settings_keyboards" android:title="@string/setting_cate_arrow_key" />
	<PreferenceScreen android:key="settings_import_default_keyboards" android:title="@string/settings_import_default_keyboard" />
	<PreferenceScreen android:key="settings_gestures" android:title="@string/setting_cate_gesture" />
	
	<PreferenceCategory android:title="@string/settings_function_button">
		<PreferenceScreen android:key="settings_function_button"
			android:title="@string/settings_function_button" android:summary="@string/settings_function_button_summary">
		</PreferenceScreen>
		<CheckBoxPreference android:key="settings_include_function_to_keyboard"
		    android:title="@string/settings_include_function_to_keyboard_title"		    
		    android:defaultValue="false" />
		<ListPreference
            android:defaultValue="4"
            android:entries="@array/settings_keyboards_count"
            android:entryValues="@array/settings_keyboards_count"
            android:key="settings_include_to_keyboard_count"
            android:title="@string/setting_function_to_keyboard_count_title" />
		<CheckBoxPreference android:key="settings_auto_hide_funtion_button"
			android:title="@string/settings_click_function_auto_hide" 
			android:defaultValue="true" />
    </PreferenceCategory>
	
	<PreferenceCategory android:title="@string/setting_cate_input_assist">
		<CheckBoxPreference android:key="settings_delay_login"
			android:title="@string/settings_delay_login" android:summary="@string/settings_delay_login_summary" 
			android:defaultValue="false" />
		<EditTextPreference android:key="settings_logout_keys"
			android:title="@string/settings_logout_keys"
			android:summary="@string/settings_logout_keys_summary"
			android:defaultValue="^[[D^[[D^[[D^[[D^[[D^my^m^m" 
		/>
			
		<CheckBoxPreference android:key="settings_auto_extractui"
			android:title="@string/settings_auto_extractui" android:summary="@string/settings_auto_extractui_summary"
			android:defaultValue="false" />
	    <ListPreference android:key="settings_screen_radio"
			android:title="@string/setting_screen_ratio"
			android:summary="@string/setting_screen_ratio" 
			android:entries="@array/screen_radio"
			android:entryValues="@array/screen_radio_values"						
			android:defaultValue="0" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/settings_cate_magnifier">
			<CheckBoxPreference android:key="settings_enable_magnifier"
			android:title="@string/settings_enable_magnifier"
			android:defaultValue="true" />
								<tw.loli.lunaTerm.widgets.SeekBarPreference
					android:key="settings_magnifier_zoom"
					android:defaultValue="20"
					android:title="@string/settings_magnifier_zoom"/>
	</PreferenceCategory>

</PreferenceScreen>
